Fixed html layout in HistoricalData-Scenario Fixed some invalid css and html content Removed perfect-scrollbar Added scrollbar css style for all webkit based browsers Default timerange in datepicker is now 1 hour Added new logic for scroll to top button

--- a/src/web/src/app/app.component.scss
+++ b/src/web/src/app/app.component.scss
@@ -6,6 +6,29 @@ footer.footer {
     left: 0;
 }
 
+.show-scrollbar {
+    overflow: auto;
+}
+
+* /deep/::-webkit-scrollbar {
+    width: 0.4em;
+    height: 0.4em;
+    background-color: #F5F5F5;
+    overflow: auto;
+}
+
+* /deep/::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+* /deep/::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #aaa;
+}
+
 header.main-header {
     height: 80px;
 }
