--- a/src/web/src/app/scenario-historicaldata/scenario-historicaldata.component.scss
+++ b/src/web/src/app/scenario-historicaldata/scenario-historicaldata.component.scss
@@ -19,6 +19,11 @@ div.sourceKeyList {
   clear: both;
 }
 
+.fullWidthAndHeight {
+    width: 100%;
+    height: 100%;
+}
+
 .is-checkradio[type=radio]+label::after, 
 .is-checkradio[type=radio]+label::before, 
 .is-checkradio[type=radio]+label:after, 
